@@ -122,7 +122,7 @@ getOption(x)
 
       Note this does not apply to packages using lazy-loading or saved
       images.  Whether they have kept source is determined when they are
-      installed (and is almost certainly false). 
+      installed (and is almost certainly false).
     }
 
     \item{\code{na.action}:}{the name of a function for treating missing
@@ -321,6 +321,36 @@ getOption(x)
   }
   Others are set from environment variables or are platform-dependent.
 }
+#ifdef windows
+\section{Options used on Windows only}{
+  The following options are used by the \code{\link{windows}},
+  \code{win.graph}, \code{x11} and \code{X11} devices.
+  \describe{
+    \item{\code{xpinch, ypinch}:}{double.  Pixels per inch, horizontally and
+      vertically.  If unset (the default), taken from Windows.}
+
+    \item{\code{graphics.record}:}{logical.  The default value of
+      \code{record} for \code{\link{windows}} devices.  Default
+      \code{FALSE}.}
+
+    \item{\code{gamma}:}{double. The default value of
+      \code{gamma} for \code{\link{windows}} devices, defaulting to 1
+      if unset (the default).}
+
+    \item{\code{windowsBuffered}:}{logical.  Should
+      \code{\link{windows}} devices be double-buffered?.  Default
+      \code{TRUE}.}
+
+    \item{\code{windowsTimeout}:}{integer vector of length 2
+      representing two times in milliseconds.  These control the
+      double-buffering of \code{\link{windows}} devices when that is
+      enabled: the first is the delay after plotting finishes
+      (default 100) and the second is the update interval during
+      continuous plotting (default 500).}
+  }
+}
+#endif
+
 \references{
   Becker, R. A., Chambers, J. M. and Wilks, A. R. (1988)
   \emph{The New S Language}.
